test(coverage): raise Sonar coverage with targeted API and starter tests